challenges/05/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebserver
  namespace: challenge5
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mywebserver
  template:
    metadata:
      labels:
        app: mywebserver
    spec:
      containers:
      - name: nginx
        image: nginx:1.24.0-alpine-slim
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html-volume
      volumes:
      - name: html-volume
        emptyDir:
          sizeLimit: 500Mi
