challenges/05/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mywebserver-service
  namespace: challenge5
spec:
  selector:
    app: mywebserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
