challenges/05/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebserver-ingress
  namespace: challenge5
spec:
  rules:
  - host: www.pluralsight-test.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mywebserver-service
            port:
              number: 80
